  - Fixed defect #480 AppleTrailerPlugin uses a charset not universally supported
  - Fixed defect #483 The rating is the same as top250 when using nfo file
  - Fixed defect #484 WebBrowser charset detection error
  - Fixed defect #485 Update for Kinopoisk plugin that allows you to specify IMDB movie URL in .nfo
  - Enhancement  #492 Updates for Sratim plugin and the Hebrew skin
  
MovieJukebox 1.0.15 beta
------------------------
  - Enhancement   #72 Support for multi-episode files and folders
  - Enhancement   #90 Skins now have the ability to wrap around from the last index page to the first and vice versa 
  - Enhancement  #225 Improved sorting of movies (by IMdB rating and by year)
  - Enhancement  #250 So how do we customize the categories?
  - Enhancement  #254 Use XBMC tvshow nfo layout to override scraper info
  - Enhancement  #281 Support DVD order from TheTVDB.com
  - Enhancement  #331 FilmUp.it scraper (Italian Plug-In)
  - Enhancement  #343 Allowing prebuf to be set
  - Fixed defect #346 Errors on multiple part movies - empty details html file
  - Enhancement  #348 Enhanced BD-50 Disk RIP Scanner
  - Fixed defect #352 Fanart not being resized
  - Fixed defect #353 Some of the html files are not getting copied from the temp dir to the jukebox dir
  - Fixed defect #354 Jukebox clean-up doesn't handle files with no extension cleanly
  - Fixed defect #356 ForceFanartOverwrite setting doesn't work
  - Fixed defect #359 Allow either Series url or Season url in NFO for TheTVDB
  - Fixed defect #361 TV Shows with new episodes do not show in the YAMJ "new" html output
  - Fixed defect #362 Genres.xml has un-necessary entries
  - Enhancement  #363 Subtitle download as part of movie information collection
                      NOTE: YAMJ needs write access to the video directory for this enhancement to work
  - Enhancement  #365 Updated Stratim plugin:
                        1) Support for NFO with sratim.co.il URL in it